Removed given extra margin from several places and added one margin in header section under CSS media query  to match mobile layout's view in order to avoid horizontal move

--- a/style.css
+++ b/style.css
@@ -227,7 +227,6 @@ nav {
 }
 
 @media screen and (max-width: 375px) {
-
     .main-nav {
         margin-left: 2rem;
         margin-top: 2rem;
@@ -244,12 +243,10 @@ nav {
     .flex {
         gap: 2rem;
     }
-    
+ 
     header {
         margin-top: -10%;
-        display: flex;   
-        width: 120vw;
-        margin-left: -2rem; 
+        display: flex;  
     }
 
     .header-section {
@@ -403,5 +400,9 @@ nav {
         justify-content: center;
         align-items: center;
         gap: 1rem;
+    }
+    
+    .header-section{
+        margin: 2rem 0;
     }
 }
